# xvolume

./: .gitignore  CMakeLists.txt  README.md  xvolumeConfig.cmake.in
include/xvolume/: xboxed_container.hpp  xmesh.hpp  xscatter.hpp  xvolume_config.hpp  xvolume_config_cling.hpp  xvolume_config_cling.hpp.in  xvolume_figure.hpp  xvolume_utils.hpp
notebooks/: xvolume_demo.ipynb  xvolume_mesh.ipynb  xvolume_parametric.ipynb
